- Add command line processing
- Commented out Signal Statistics stuff since it's causing hangs with my second tuner.
- Added pausing to TSFileSource source
- Fixed TSFileSource source to be able to load a file a second time
- Upgraded DWThread class
- Fixed transparency with osd lists in directdraw mode
- Added an UpdateData thread to BDADVBTSource to get Signal Statistics

bear:
Changes:
- Added the TSFileSource's Demux class to enable channel zapping in Watch TV Mode.
- Added a size limit to the resume list, can be set in the settings.xml file.
- Fixed a few things with the resume settings.
- Added file resume list to application, also added settings in the global & timeshift menus.
- Added the Cyberlink 7 h264 decoder to the decoder.xml file.
- Fixed a few bugs that were causing problems with rendering decoders.
- Fixed a few bugs to get the application to play h264 ts files, also fixed a problem with playing mpg files.
- Added support for h264 media type, can't tell if it works as have no access to a broadcast.
- Added a Decoder Test function to the decoder selection method, to use you need to enable decoder test setting in the settings menu.
- Added a emboss image to the settings menu to mask out decoders that do not match the media type selected.
- Added a Cycle Cards option in the settings menu so the cards will not cycle.
- Slight change to the minimise/restore function to remove some error messages from the log.
- Added the LastChannel function to the Watch TV  Timeshift modes.
- Solved a few stream selection locking problems by turning on and off of some updating threads.
- Added a extended network name option to the settings menu so that the network name can be identified by adding the TSID value.
- Fixed a few bugs regarding the ViewRecordFile function.
- Started rationalise the code into the filtergraph tools class.