@@ -29,6 +29,8 @@ nate:
 
 bear:
 Changes:
+- Added some Minimise/Close/Open Display() functions to the file player.
+- Fixed a problem with the diplay resizing causing the Watch TV Mode Stopping the graph.
 - Added the TSFileSource's Demux class to enable channel zapping in Watch TV Mode.
 - Added a size limit to the resume list, can be set in the settings.xml file.
 - Fixed a few things with the resume settings.
